refactor: General cleanup and nullibility fixes